Various visual and spacing fixes, fix embed error on some browsers, update word filter, and add ip mute user and un ip-mute user commands!

--- a/client/stylesheets/chat-screen.css
+++ b/client/stylesheets/chat-screen.css
@@ -10,10 +10,13 @@
   color: var(--header-primary);
   /* Use minmax(0, 1fr) instead of 1fr so that elements can be prevented from overflowing their grid areas. Refer to https://stackoverflow.com/a/52787826/8584806 */
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   gap: 1px 1px;
   grid-template-areas:
     "Top-Bar Top-Bar Top-Bar Top-Bar Top-Bar Top-Bar Top-Bar"
+    "Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area"
+    "Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area"
+    "Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area"
     "Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area"
     "Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area"
     "Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area"
@@ -69,10 +72,13 @@
     height: 100%;
     /* Use minmax(0, 1fr) instead of 1fr so that elements can be prevented from overflowing their grid areas. Refer to https://stackoverflow.com/a/52787826/8584806 */
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-    grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+    grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     gap: 1px 1px;
     grid-template-areas:
       "Server-List-Area Top-Bar Top-Bar Top-Bar Top-Bar Top-Bar User-List"
+      "Server-List-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area User-List"
+      "Server-List-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area User-List"
+      "Server-List-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area User-List"
       "Server-List-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area User-List"
       "Server-List-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area User-List"
       "Server-List-Area Chat-Area Chat-Area Chat-Area Chat-Area Chat-Area User-List"
@@ -174,7 +180,7 @@
   list-style: none;
   width: 100%;
   height: fit-content;
-  max-height: 80%;
+  max-height: 85%;
   padding-left: 0;
   margin: 0;
   overflow-y: auto;
